Minor fixes and refactoring

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <link rel="stylesheet" href="assets/css/styles.css" />
 
     <title>Wedgles :: Desenvolvedor Frontend</title>
-    <meta name="description" content="" />
+    <meta
+      name="description"
+      content="Desenvolvedor Front-End</b> com habilidades em HTML, CSS e
+    JavaScript, experiente em criar interfaces de usuário atraentes e
+    funcionais."
+    />
     <meta
       name="keywords"
       content="portfolio,wedgles,elinaldo,programador,desenvolvedor,frontend"
@@ -86,10 +91,20 @@
           <!-- Theme button -->
           <button class="change-theme" id="theme-button">
             <div class="moon">
-              <img src="assets/img/icons/moon-on-i.svg" alt="Dark Button" />
+              <img
+                src="assets/img/icons/moon-on-i.svg"
+                width="18px"
+                height="18px"
+                alt="Dark Button"
+              />
             </div>
             <div class="sun">
-              <img src="assets/img/icons/sun-i.svg" alt="Light Button" />
+              <img
+                src="assets/img/icons/sun-i.svg"
+                width="18px"
+                height="18px"
+                alt="Light Button"
+              />
             </div>
           </button>
 
@@ -114,7 +129,7 @@
             <div class="home__image">
               <img
                 src="assets/img/profile/profile.jpg"
-                alt=""
+                alt="photo profile"
                 class="home__img"
               />
               <div class="home__shadow"></div>
@@ -125,6 +140,7 @@
                 href="https://www.linkedin.com/in/wedgles-elinaldo97/"
                 target="_blank"
                 class="social-link linkedin"
+                aria-label="Perfil do LinkedIn de Wedgles Elinaldo"
               >
                 <i class="ri-linkedin-box-fill"></i>
               </a>
@@ -133,6 +149,7 @@
                 href="https://github.com/Wedgles97"
                 target="_blank"
                 class="social-link github"
+                aria-label="Perfil do GitHub de Wedgles Elinaldo"
               >
                 <i class="ri-github-fill"></i>
               </a>
@@ -141,6 +158,7 @@
                 href="https://www.instagram.com/wedgles_/"
                 target="_blank"
                 class="social-link instagram"
+                aria-label="Perfil do Instagram de Wedgles Elinaldo"
               >
                 <i class="ri-instagram-line"></i>
               </a>
@@ -166,20 +184,40 @@
 
           <ul class="skills__list">
             <li class="skills__item">
-              <img src="./assets/img/icons/react-i.svg" alt="React Icon" />
+              <img
+                src="./assets/img/icons/react-i.svg"
+                width="48px"
+                height="48px"
+                alt="React Icon"
+              />
             </li>
             <li class="skills__item">
-              <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+              <img
+                src="./assets/img/icons/js-i.svg"
+                width="48px"
+                height="48px"
+                alt="JavaScript Icon"
+              />
             </li>
             <li class="skills__item">
-              <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
+              <img
+                src="./assets/img/icons/html5-i.svg"
+                width="48px"
+                height="48px"
+                alt="HTML5 Icon"
+              />
             </li>
             <li class="skills__item">
-              <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
+              <img
+                src="./assets/img/icons/css3-i.svg"
+                width="48px"
+                height="48px"
+                alt="CSS3 Icon"
+              />
             </li>
           </ul>
 
-          <a href="#about" class="home__scroll">
+          <a href="#about" class="home__scroll" aria-label="scroll-down">
             <div class="arrow-down">
               <i class="ri-arrow-down-s-line"></i>
               <i class="ri-arrow-down-s-line"></i>
@@ -205,12 +243,23 @@
               entregar soluções web que cativam os usuários.<br /><br />
 
               Estou disponível para contato via
-              <a href="https://www.linkedin.com/in/wedgles-elinaldo97/">
+              <a
+                href="https://www.linkedin.com/in/wedgles-elinaldo97/"
+                target="_blank"
+                class="hover-link"
+                aria-label="Perfil do LinkedIn de Wedgles Elinaldo"
+              >
                 LinkedIn</a
               >
-              ou <a href="mailto:wedegles@gmail.com">e-mail</a>, ansioso para
-              compartilhar mais sobre meu trabalho e como posso enriquecer seus
-              projetos. Vamos criar algo extraordinário juntos!
+              ou
+              <a
+                href="mailto:wedegles@gmail.com"
+                target="_blank"
+                class="hover-link"
+                aria-label="E-mail de Wedgles Elinaldo"
+                >e-mail</a
+              >, ansioso para compartilhar mais sobre meu trabalho e como posso
+              enriquecer seus projetos. Vamos criar algo extraordinário juntos!
             </p>
           </div>
         </div>
@@ -236,9 +285,24 @@
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
               <div class="projects__technologies">
-                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
-                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
-                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+                <img
+                  src="./assets/img/icons/html5-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="HTML5 Icon"
+                />
+                <img
+                  src="./assets/img/icons/css3-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="CSS3 Icon"
+                />
+                <img
+                  src="./assets/img/icons/js-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="JavaScript Icon"
+                />
               </div>
 
               <h2 class="projects__title">Portfolio</h2>
@@ -250,11 +314,19 @@
             </div>
 
             <div class="projects__buttons">
-              <a href="" target="_blank" class="projects__link">
-                <i class="ri-github-line"></i> Github
+              <a
+                href="https://github.com/Wedgles97/my-portfolio"
+                target="_blank"
+                class="projects__link hover-link"
+              >
+                <i class="ri-github-line"></i> Código Fonte
               </a>
-              <a href="" target="_blank" class="projects__link">
-                <i class="ri-link"></i> Deploy
+              <a
+                href="https://wedgles97.github.io/my-portfolio/"
+                target="_blank"
+                class="projects__link hover-link"
+              >
+                <i class="ri-link"></i> Demonstração
               </a>
             </div>
           </article>
@@ -272,9 +344,18 @@
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
               <div class="projects__technologies">
-                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
-                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
-                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+                <img
+                  src="./assets/img/icons/html5-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="HTML5 Icon"
+                />
+                <img
+                  src="./assets/img/icons/css3-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="CSS3 Icon"
+                />
               </div>
               <h2 class="projects__title">Produto Preview Card</h2>
 
@@ -289,16 +370,16 @@
               <a
                 href="https://github.com/Wedgles97/product-preview-card-component"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-github-line"></i> Github
+                <i class="ri-github-line"></i> Código Fonte
               </a>
               <a
                 href="https://wedgles97.github.io/product-preview-card-component/"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-link"></i> Deploy
+                <i class="ri-link"></i> Demonstração
               </a>
             </div>
           </article>
@@ -316,9 +397,24 @@
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
               <div class="projects__technologies">
-                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
-                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
-                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+                <img
+                  src="./assets/img/icons/html5-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="HTML5 Icon"
+                />
+                <img
+                  src="./assets/img/icons/css3-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="CSS3 Icon"
+                />
+                <img
+                  src="./assets/img/icons/js-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="JavaScript Icon"
+                />
               </div>
               <h2 class="projects__title">Soundpad</h2>
 
@@ -333,16 +429,16 @@
               <a
                 href="https://github.com/Wedgles97/sound-pad"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-github-line"></i> Github
+                <i class="ri-github-line"></i> Código Fonte
               </a>
               <a
                 href="https://wedgles97.github.io/sound-pad/"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-link"></i> Deploy
+                <i class="ri-link"></i> Demonstração
               </a>
             </div>
           </article>
@@ -360,9 +456,24 @@
             <div class="projects__content">
               <h3 class="projects__subtitle">Website</h3>
               <div class="projects__technologies">
-                <img src="./assets/img/icons/html5-i.svg" alt="HTML5 Icon" />
-                <img src="./assets/img/icons/css3-i.svg" alt="CSS3 Icon" />
-                <img src="./assets/img/icons/js-i.svg" alt="JavaScript Icon" />
+                <img
+                  src="./assets/img/icons/html5-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="HTML5 Icon"
+                />
+                <img
+                  src="./assets/img/icons/css3-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="CSS3 Icon"
+                />
+                <img
+                  src="./assets/img/icons/js-i.svg"
+                  width="48px"
+                  height="48px"
+                  alt="JavaScript Icon"
+                />
               </div>
               <h2 class="projects__title">Origin Six - Beauty Salon</h2>
 
@@ -376,16 +487,16 @@
               <a
                 href="https://github.com/Wedgles97/beautysaloon"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-github-line"></i> Github
+                <i class="ri-github-line"></i> Código Fonte
               </a>
               <a
                 href="https://wedgles97.github.io/beautysaloon/"
                 target="_blank"
-                class="projects__link"
+                class="projects__link hover-link"
               >
-                <i class="ri-link"></i> Deploy
+                <i class="ri-link"></i> Demonstração
               </a>
             </div>
           </article>
@@ -401,10 +512,19 @@
           <p class="footer__description">
             Ficarei feliz em saber mais sobre seus projetos e como podemos
             trabalhar juntos para torná-los realidade. <br /><br />Me mande um
-            <a href="#" target="_blank">email</a> ou uma mensagem no
+            <a
+              href="mailto:wedegles@gmail.com"
+              target="_blank"
+              class="hover-link"
+              aria-label="E-mail de Wedgles Elinaldo"
+              >e-mail</a
+            >
+            ou uma mensagem no
             <a
               href="https://www.linkedin.com/in/wedgles-elinaldo97/"
               target="_blank"
+              class="hover-link"
+              aria-label="Perfil do LinkedIn de Wedgles Elinaldo"
               >linkedin</a
             >.
           </p>
@@ -414,6 +534,7 @@
               href="https://www.linkedin.com/in/wedgles-elinaldo97/"
               target="_blank"
               class="social-link linkedin"
+              aria-label="Perfil do LinkedIn de Wedgles Elinaldo"
             >
               <i class="ri-linkedin-box-fill"></i>
             </a>
@@ -422,6 +543,7 @@
               href="https://github.com/Wedgles97"
               target="_blank"
               class="social-link github"
+              aria-label="Perfil do GitHub de Wedgles Elinaldo"
             >
               <i class="ri-github-fill"></i>
             </a>
@@ -430,6 +552,7 @@
               href="https://www.instagram.com/wedgles_/"
               target="_blank"
               class="social-link instagram"
+              aria-label="Perfil do Instagram de Wedgles Elinaldo"
             >
               <i class="ri-instagram-line"></i>
             </a>
@@ -440,6 +563,8 @@
           <a
             href="https://www.linkedin.com/in/wedgles-elinaldo97/"
             target="_blank"
+            class="hover-link"
+            aria-label="Perfil do LinkedIn de Wedgles Elinaldo"
           >
             Wedgles Elinaldo.
           </a>
@@ -449,7 +574,12 @@
     </footer>
 
     <!--========== SCROLL UP ==========-->
-    <a href="#" class="scrollup" id="scroll-up">
+    <a
+      href="#"
+      class="scrollup"
+      id="scroll-up"
+      aria-label="Botão para voltar ao topo da página"
+    >
       <i class="ri-arrow-up-s-line"></i>
     </a>
 
