Updated CV and bug fix CV download

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
               <a
                 href="assets/archive/Wedgles-CV.pdf"
                 class="nav__link"
-                download="Wedgles CV"
-                >Baixar CV <i class="ri-download-2-fill"></i>
+                id="downloadLink"
+                download="Wedgles-CV.pdf"
+              >
+                Baixar CV <i class="ri-download-2-fill"></i>
               </a>
             </li>
           </ul>
